...
    @IBOutlet weak var tableView: UITableView!
    
    override func viewDidLoad() {
        super.viewDidLoad()
        title = "Locations"
        view.accessibilityIdentifier = "citiesListScreen"
        tableView.accessibilityIdentifier = "citiesTable"
        cities = dataProvider?.citiesList()
    }

    override func didReceiveMemoryWarning() {
        super.didReceiveMemoryWarning()
        // Dispose of any resources that can be recreated.
...
